--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Make a JavaScript elevator",
   "main": "index.js",
-  "type": "module",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha tests/elevator_test.cjs",
+    "build": "tsc",
+    "test": "npm run build && mocha dist/tests/elevator_test.js",
     "server": "cd web-app-version && nodemon server/index.js"
   },
   "repository": {
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/Alex-Tideman/elevator_challenge",
   "devDependencies": {
+    "@types/chai": "^5.2.3",
+    "@types/jest": "^30.0.0",
     "babel-core": "^6.22.1",
     "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "mocha": "^9.1.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "typescript": "^5.9.3"
   }
 }
