--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "directories": {
     "test": "tests"
   },
+  "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build:server": "tsc",
+    "build:web": "esbuild web/main.ts --bundle --format=esm --outfile=dist/web/main.js",
+    "build": "npm run build:server && npm run build:web",
     "test": "npm run build && mocha dist/tests/*_test.js",
-    "server": "cd web-app-version && nodemon server/index.js"
+    "server": "cd web-app-version && nodemon server/index.js",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -23,12 +27,18 @@
   "homepage": "https://github.com/Alex-Tideman/elevator_challenge",
   "devDependencies": {
     "@types/chai": "^5.2.3",
+    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.9",
     "babel-core": "^6.22.1",
     "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "mocha": "^9.1.1",
     "nodemon": "^2.0.12",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
