--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ES2020",
     "lib": ["ES2020"],
     "moduleResolution": "node",
     "strict": true,
@@ -18,6 +18,7 @@
   "include": [
     "*.ts",
     "tests/*.ts",
+    "app/**/*.ts",
     "app/Clock.ts",
     "app/Elevator.ts",
     "app/LobbyPolicy.ts",
