refactor: web to js

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "chai": "^3.5.0",
     "mocha": "^9.1.1",
     "nodemon": "^2.0.12"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
